@@ -52,3 +52,15 @@ dmap_record_get_type (void)
 	}
 	return object_type;
 }
+
+GByteArray *
+dmap_record_to_blob (DMAPRecord *record)
+{
+        return DMAP_RECORD_GET_INTERFACE (record)->to_blob (record);
+}
+
+DMAPRecord *
+dmap_record_set_from_blob (DMAPRecord *record, GByteArray *blob)
+{
+	return DMAP_RECORD_GET_INTERFACE (record)->set_from_blob (record, blob);
+}
