@@ -1,3 +1,11 @@
+29 May 2010 W. Michael Petullo <mike@flyn.org>
+
+	* Add blob functions to DMAPRecord interface.
+
+28 May 2010 W. Michael Petullo <mike@flyn.org>
+
+	* Install dmap-md5.h.
+
 27 May 2010 W. Michael Petullo <mike@flyn.org>
 
 	* Fix crash upon finalizing DMAPShare that was caused by misuse of
